# VirtualMCU

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
Tests/: Test_In-Out.py
sensors/: EncoderSensor.py
src/: TestPWM.py  Test_In-Out.py  user_code.py  vmcu.py
src/clock/: __init__.py  timer.py
src/control/: __init__.py
src/gpio/: __init__.py  mode.py  pinout.py
src/pin/: __init__.py  memory.py  pinout.py
src/sensors/: IMD.py  LinearSensor.py
src/services/: ADC.py  DualPWM.py  EXTI.py  Encoder.py  InputCapture.py  PWM.py  digital_in.py  digital_out.py
src/services/communication/: FDCAN.py  fdcan.py  spi.py
src/services/communications/: DatagramSocket.py  Decoder_Data.py  Ethernet_packets.py  Packets.py  ServerSocket.py  Socket.py  ethernet.py  spi.py
src/shared_memory/: __init__.py
src/test/: TestFDCAN.py  TestReceaveFDCAN.py  TestSendFDCAN.py  test2.py
src/test_decoder/: test_decoder_send.py
src/test_lib/condition/: __init__.py  aggregate.py  condition.py  timed.py
src/test_lib/input/: __init__.py  aggregate.py  checked.py  input.py
src/test_lib/test/: __init__.py
src/vmcu/: assertions.py
src/vmcu/pin/: __init__.py  memory.py
src/vmcu/sensors/: EncoderSensor.py  IMD.py  LinearSensor.py
src/vmcu/services/: ADC.py  DualPWM.py  EXTI.py  Encoder.py  InputCapture.py  PWM.py  digital_in.py  digital_out.py
src/vmcu/shared_memory/: __init__.py
src/vmcu/test/: TestMCUSPI.py  (+4 more)
vmcu_package/pin/: __init__.py
vmcu_package/services/: ADC.py  DualPWM.py  Encoder.py
vmcu_package/shared_memory/: __init__.py
(+23 files in other folders)
