[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "vmcu"
version = "0.0.9"
description = "A package to manage the resources of the STM32 simulator "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.setuptools.packages.find]
where = ["src"] 
[project.urls]
Homepage = "https://github.com/HyperloopUPV-H8"
